dev/kustomize/end-user-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: end-user-ui
    helm.sh/chart: end-user-ui-0.1.0
  name: end-user-ui
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/name: end-user-ui
  type: ClusterIP
